--- a/docs/Unit-9/9.1-potential.md
+++ b/docs/Unit-9/9.1-potential.md
@@ -2,38 +2,115 @@
 sidebar_position: 2
 ---
 
-# 9.1 - Electric Potential Part I
+# 9.1 - Electric Potential
 
-## 9.1.1 - Introduction to Electric Potential and Potential Difference
+Because electrostatic force is conservative, we can use *electric potential*. This is incredibly useful for working with electrical circuits and devices (along with trying to avoid using forces as much as possible 😉).
 
-From earlier units, we learned that the force of the attraction between two charged objects is represented by Coulomb's Law, and the electric field relationship $\mathbf{F}_{e}  = q\mathbf{E}$ such that q is a test charge (charge of negligible mass which is under the influence of the electric field). In this relationship, the force of attraction represented by Coulomb's Law between charged objects is a conservative force such as gravity. In mechanics we learned that the work done by an external agent in an electric field is equal to $\mathbf{mgh}$, and te work done by the gravitational force is $\mathbf{-mgh}$. 
+## 9.1.1 - Electric Potential and Gravitational Potential
 
-Similarly, there is a potential energy when working with objects under the influence of an electric field. In mechanics, the derivation for net work was equal to $\mathbf{\int_a^b F dx}$, which is also equivalent to the change in kinetic energy $\mathbf{\Delta K}$, or the negative change in potential energy $\mathbf{-\Delta U}$. With this logic, we would assume that the potential energy could just be written as $\mathbf{-\Delta U = \int_a^b F dx}$. This is CLOSE, but still INCORRECT.
+Just like earlier units, let’s start by comparing concepts from electricity to concepts from mechanics. In mechanics, we know that there is gravitational potential energy $U_{G}$. In electricity, it is denoted as $U_{E}$.
 
-:::warning
+The similarities between electrical and gravitational potential are as follows:
 
-$\mathbf{-\Delta U = \int_a^b F dx}$ is NOT a valid equation for potential energy under the influence of an electric field.
-:::
+1. You need two objects in a system. For example, you can’t have $U_{G}$ unless there are two masses. One mass **cannot** have $U_{G}$. Similarly, you need two charged objects to have $U_{E}$
+2. Both $U_{G}$ and $U_{E}$ are proportional to $\frac{1}{r}$.
 
-The path through which the force is applied can be a line or a curve. Thus, a path integral is used to find the potential energy. Here, instead of linear displacemnt $\mathbf{x}$, the path is instead represented by the infinitesmal lines which create the path, represented by $\mathbf{s}$. Therefore, the correct path integral becomes $\mathbf{-\Delta U = \int_a^b {F}_{e} ds}$
+In fact, even the formulas are the same! Perhaps Coulomb was copying Newton’s homework…
+
+$$
+
+U_{E} = \frac{k \cdot q_{1}q_{2}}{r} \hspace{35pt} U_{G} = \frac{G \cdot m_{1}m_{2}}{r}
+
+$$
+
+## 9.1.2 - Electric Potential in Depth
 
 :::tip[Key Equation]
 
-Potential energy for an electric field is defined as $\mathbf{\Delta U = -q_{0}\int_a^b E ds}$, where:
-$\mathbf{E}$ is the electric field vector, or the symbol representing the field
-$q_{0}$ is the positive test charge which we placed in the field
-$\Delta U$ is the potential energy
-$\mathbf{a}$ marks the first point on the path
-$\mathbf{b}$ marks the second point on the path
-$\mathbf{s}$ marks the infinitesmal lines which make the path
+$U_{E} = \frac{k \cdot q_{1}q_{2}}{r}$
+
+* $U_{E}$ is the electrical potential energy
+  * **Important note:** $U_{E}$ is a scalar quantity and can be *negative or positive*.  We will go over this later.
+* $k$ is the Coulomb constant
+* $q_{1}$ and $q_{2}$ are the two charges
 
 :::
 
-If you divide the potential energy by the test charge, you get a value which depends on the source charge distribution. This value is called electric potential and only depends on the source charge distribution and has a value at every point of an electric field. The equation $\mathbf{V = \frac{\mathbf{\Delta U}}{q_{0}}}$ represents this concept. The change in electric potential is called potential difference and is represented by $\mathbf{\Delta V}$, which is $\mathbf{V_{b} - V_{a}}$. Through this, the eqution of the potential difference becomes $\mathbf{\Delta V = \frac{-q_{0} \int_a^b E \, ds}{q_{0}}}$ or $\mathbf{\Delta V = -\int_a^b E ds}$
+:::tip[Key Equation]
 
-## 9.1.2 - Potential Differences in a Uniform Electric Field
+$U_{E} = qV$
 
-## 9.1.3 - Obtaining the Value of the Electric Field from Electric Potential
+$V = \frac{U_{E}}{q} = \frac{kq}{r}$
 
+**${V}$ is the symbol for electric potential, but $U_{E}$ is electric potential *energy*.**
 
+:::
 
+If there’s more than two charged objects, you’ll need to calculate $U_{E}$ for every pair of objects. **Don’t forget the signs of the charges.** Negative charges will have negative value.
+
+:::info[Sample Question]
+
+![Question](./9.1-Images/Charges-Problem-Three-Charges..svg)
+
+What is the total electric potential energy for the system? Derive an expression.
+
+**Solution:**
+
+We need to get the electric potential for every pair of objects. The pairs are: $q_{1}$ and $q_{2}$, $q_{1}$ and $q_{3}$, $q_{2}$ and $q_{3}$.
+
+We also need to keep in mind that $q_{1}$ and $q_{2}$ are *positive,* while $q_{3}$ is negative. Our equation is as follows:
+
+$$$
+
+U_{E} = k\frac{q_{1}q_{2}}{r_{12}} - k\frac{q_{1}q_{3}}{r_{13}} - k\frac{q_{2}q_{3}}{r_{23}}
+
+$$$
+
+* $r_{12}$ is the distance between charges $q_{1}$ and $q_{2}$
+* $r_{13}$ is the distance between charges $q_{1}$ and $q_{3}$
+* $r_{23}$ is the distance between charges $q_{2}$ and $q_{3}$
+* Because $q_{3}$ is negative, this means that $k\frac{q_{1}q_{3}}{r_{13}}$ and $k\frac{q_{2}q_{3}}{r_{23}}$ are negative
+
+:::
+
+## 9.1.3 - Negative and Positive Electric Potential
+
+When the charges are of the opposite sign, you will have negative electric potential energy. However, when the charges are of the same sign, you will have positive electric potential energy.
+
+## 9.1.4 - The Link Between Electric Field and Potential
+
+:::tip[Key Equation
+
+$E_{x} = \frac{dV}{dx}$
+
+$\Delta V = -\int_{}^{}\overrightarrow{E}\cdot d\overrightarrow{r}$
+
+* $\Delta V$ is electric potential
+
+$\Delta V = V_{final} - V_{initial}$
+
+* Electric fields move from high to low potential, so $\Delta V$ is negative
+
+:::
+
+Similar to kinematics, we can use calculus to get expressions for electric potential $V$ from equations defining electric field $E$.
+
+$E_{x} = 6x^{2}+7x$
+
+$\Delta V = -\int_{}^{}\overrightarrow{E}\cdot d\overrightarrow{r}$
+
+We are integrating with respect to $x$, so instead of $dr$, we will use $dx$.
+
+$\Delta V = -\int_{}^{}\overrightarrow{E}\cdot d\overrightarrow{x} = -\int_{}^{} (6x^{2}+7x)dx = - \left( \frac{6x^{3}}{3}+\frac{7x^{2}}{2} \right) + C = -3x^{3} - \frac{7}{2}x^{2} +C$
+
+In this context, $C$ is $V_{0}$, or the initial electric potential.
+
+## 9.1.5 - Equipotential Lines
+
+An **equipotential line** is a line that tells us where potential is equal. However, this does *NOT* mean that the potential is 0. You can think of these lines like a topographic map.
+
+![Image of equipotential lines](./9.1-Images/equipotential.png)
+
+![Image of a topographic map; both 3d and 2d view](./9.1-Images/topographic.png)
+
+Like the topographic map, when lines are close together, we know that the potential is changing quickly in a small space. It’s the electrical equivalent of a steep hill on a topographic map. We can conclude that the electric field is large from this.
