--- a/docs/Unit-9/9.2-conservation.md
+++ b/docs/Unit-9/9.2-conservation.md
@@ -20,9 +20,9 @@ The change in potential energy is equal and opposite to the change in kinetic en
 
 ## 9.2.2 - Conservation of Electrical Energy In Depth
 
-$\Delta V = \frac{\Delta U_{E}}{q}$
+$\large \Delta V = \frac{\Delta U_{E}}{q}$
 
-$\Delta V$ is the potential difference and $\Delta U_{E}$ is the change in electrica potential energy.
+$\Delta V$ is the potential difference and $\Delta U_{E}$ is the change in electrical potential energy.
 
 :::info[Sample Question]
 
@@ -32,7 +32,7 @@ We know that $\Delta V = \frac{\Delta U_{E}}{q}$, so we can rewrite it as $\Delt
 
 Plugging in our known values, we get $\Delta U_{E} = (1.6 \times 10^{-19} C)(+200 V)$
 
-$\Delta U_{E} = +3.2 \times 10^{-17} \space J$
+$\large \Delta U_{E} = +3.2 \times 10^{-17} \space J$
 
 The next step is to use *energy* to solve for the final velocity. This is just like mechanics.
 
@@ -40,29 +40,25 @@ We already know that $\Delta U = -\Delta K$. Flip it around, and we get $- \Delt
 
 So we know that $\Delta K = - \Delta U_{E}$. And we also know that $\Delta U_{E}$ is because we solved it earlier. We get the following equation:
 
-$\Delta K = - \Delta U_{E} = -3.2 \times 10^{-17} \space J$. Remember, the electrical potential energy has a *negative* sign before it, so we have to flip our result.
+$\large \Delta K = - \Delta U_{E} = -3.2 \times 10^{-17} \space J$. Remember, the electrical potential energy has a *negative* sign before it, so we have to flip our result.
 
 Just like mechanics, the formula for the change in kinetic energy remains the same:
 
-$\Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}$
+$\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}$
 
 We have all the unknowns needed, so let’s substitute and solve:
 
-$$$
+$\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}$
 
-\Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}
+$\large -3.2 \times 10^{-17} \space J = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}$
 
--3.2 \times 10^{-17} \space J = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2}
+$\large -3.2 \times 10^{-17} \space J = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} m(2 \times 10^{5} \space \frac{m}{s})^{2}$
 
--3.2 \times 10^{-17} \space J = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} m(2 \times 10^{5} \space \frac{m}{s})^{2}
-
--3.2 \times 10^{-17} \space J = \frac{1}{2} (1.67 \times 10^{-27} \space kg)v_{f}^{2} - \frac{1}{2} (1.67 \times 10^{-27} \space kg)(2 \times 10^{5} \space \frac{m}{s})^{2}
-
-$$$
+$\large -3.2 \times 10^{-17} \space J = \frac{1}{2} (1.67 \times 10^{-27} \space kg)v_{f}^{2} - \frac{1}{2} (1.67 \times 10^{-27} \space kg)(2 \times 10^{5} \space \frac{m}{s})^{2}$
 
 This equation looks scary, but CAS can take care of it! (Unless you’re up for an algebra challenge)
 
-$v_{f} = 4.095\times10^{4} \space \frac{m}{s}$
+$\large v_{f} = 4.095\times10^{4} \space \frac{m}{s}$
 
 :::
 
@@ -70,6 +66,29 @@ As derived in the sample question above, we have a new key equation:
 
 :::tip[Key Equation]
 
-\Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2} = -\Delta U_{E}
+$\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2} = -\Delta U_{E}$
 
 :::
+
+## Useful Resources
+
+**9.2.1**
+
+* [Conservation of energy article](http://physics.bu.edu/~duffy/py105/EnergyConservation.html)
+* [Conservation of mechanical energy article](https://phys.libretexts.org/Bookshelves/University_Physics/Book%3A_Introductory_Physics_-_Building_Models_to_Describe_Our_World_(Martin_Neary_Rinaldo_and_Woodman)/08%3A_Potential_Energy_and_Conservation_of_Energy/8.03%3A_Mechanical_Energy_and_Conservation_of_Energy#:~:text=and%20if%20there%20is%20no,the%20energy%20of%20the%20object.)
+* [Another article about conservation of mechanical energy](https://fiveable.me/key-terms/principles-physics-i/conservation-of-mechanical-energy#:~:text=Review%20Questions,conserved%20in%20this%20idealized%20scenario.)
+
+**9.2.2**
+
+* [Article about conservation of electrical energy](https://fiveable.me/ap-physics-2-revised/unit-10/7-conservation-of-electric-energy/study-guide/xeLRWRG6zabL3Yw4#:~:text=Conservation%20of%20Energy%20Principle&text=This%20fundamental%20principle%20governs%20the,change%20in%20electric%20potential%20energy)
+* [Conservation of electric energy in fields](https://fiveable.me/key-terms/principles-physics-ii/conservation-of-energy-in-electric-fields#:~:text=When%20a%20charged%20particle%20moves%20within%20an%20electric%20field%2C%20the,is%20transferred%20rather%20than%20lost.)
+* [Electric potential energy](https://courses.lumenlearning.com/atd-austincc-physics2/chapter/19-1-electric-potential-energy-potential-difference/#:~:text=Conservation%20of%20Energy,insights%20and%20facilitate%20problem%20solving.)
+* [Another article about energy conservation in electric fields](https://fiveable.me/key-terms/principles-physics-ii/energy-conservation-in-electric-fields#:~:text=Citation:-,Definition,to%20work%20done%20on%20charges.)
+
+## Equations and Constants
+
+**Equations**
+
+* $\large \Delta V = \frac{\Delta U_{E}}{q}$
+
+* $\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2} = -\Delta U_{E}$
