fixing equations and also made them larger

--- a/docs/Unit-8/8.6-lines.md
+++ b/docs/Unit-8/8.6-lines.md
@@ -86,7 +86,7 @@ In summary, electric field lines are visual representations that help us explain
 
 **Equations**
 
-- $\mathbf{N} = \mathbf{C} q$
+- $\large \mathbf{N} = \mathbf{C} q$
   - $\mathbf{N}$ = the number of lines
   - $\mathbf{q}$ = the charge
   - $\mathbf{C}$ = a constant
