--- a/docs/Unit-8/8.8-gauss.md
+++ b/docs/Unit-8/8.8-gauss.md
@@ -10,7 +10,7 @@ Before we talk about electric flux, let's do a quick refresher of dot products.
 
 Definition: a vector operation that results in a **scalar** product
 
-$\overrightarrow{A} \cdot \overrightarrow{B} = |\overrightarrow{A}\space||\overrightarrow{B}\space|\space cos(\theta)$
+$\large \overrightarrow{A} \cdot \overrightarrow{B} = |\overrightarrow{A}\space||\overrightarrow{B}\space|\space cos(\theta)$
 
 ![Dot product](8.9-Images/Dot-Product.svg)
 
@@ -47,7 +47,7 @@ We will also replace $\overrightarrow{E_{\perp}}$ with $\overrightarrow{E}cos(\t
 
 :::tip[Key Equation]
 
-$\Phi_E = EA_{\perp} = EAcos(\theta)$
+$\large \Phi_E = EA_{\perp} = EAcos(\theta)$
 
 $\theta$ is the angle between the electric field vector and an imaginary line that is perpendicular to the area. See [8.8.1](8.9-gauss.md#871---dot-product) for more details.
 
@@ -57,14 +57,15 @@ $\theta$ is the angle between the electric field vector and an imaginary line th
 
 A large flat metal sheet lies horizontally on the ground under a uniformly distributed electric field. A circular loop of radius $r = 0.4\text{m}$ is held perpendicular to the field lines, which point vertically upward with a constant magnitude of $E = 250 \space \text{N/C}$. What is the total electric flux $\Phi_E$ through the loop?
 
-$\Phi_E = EA\cos\theta$.
+$\large \Phi_E = EA\cos\theta$.
+
 Since the electric field is perpendicular to the loop, $\theta = 0^\circ$, and $\cos\theta = 1$
 
-$A = \pi r^2 = \pi (0.4)^2 = 0.16\pi\text{m}^2$
+$\large A = \pi r^2 = \pi (0.4)^2 = 0.16\pi\text{m}^2$
 
-$\Phi_E = (250)(0.16\pi) = 40\pi \space \text{N} \cdot \text{m}^2/\text{C}$
+$\large \Phi_E = (250)(0.16\pi) = 40\pi \space \text{N} \cdot \text{m}^2/\text{C}$
 
-$\Phi_E \approx 125.7 \space \text{N} \cdot \text{m}^2/\text{C}$
+$\large \Phi_E \approx 125.7 \space \text{N} \cdot \text{m}^2/\text{C}$
 
 :::
 
@@ -80,7 +81,7 @@ Consider this: imagine if we separated the complex figure above into multiple sq
 
 :::tip[Key Equation]
 
-$\Phi_E = \oint \mathbf{E} \cdot d\mathbf{A}$
+$\large \Phi_E = \oint \mathbf{E} \cdot d\mathbf{A}$
 
 **Note:** The integral with a ring in it represents the integral of a closed path or a surface. Evaluating it may be a bit complex, but that is where Gauss's Law comes in. Gauss's Law will let us easily find the quantity above.
 
@@ -95,14 +96,14 @@ A square surface with sides of $1~\text{m} \times 1~\text{m}$ located over the $
 Solution:
 
 Since the electric field is constant and the surface is flat, we can use the electric flux formula:
-$\Phi_e = EA \cos \theta$
+$\large \Phi_e = EA \cos \theta$
 Note that the given angle is not the angle we want to use in the flux formula. The correct angle between $\vec{E}$ and $\hat{n}$ is $180^\circ - 72^\circ$ (refer to the previous problem). Therefore, the electric flux through the surface is:
 
-$\Phi_E = EA \cos \theta$
-$= 200 \times (1)^2 \times \cos(180^\circ - 72^\circ)$
-$= 200 \times 1 \times \cos(108^\circ)$
-$= 200 \times (-0.309)$
-$= -61.8~\text{N} \cdot \text{m}^2 / \text{C}$
+$\large \Phi_E = EA \cos \theta$
+$\large = 200 \times (1)^2 \times \cos(180^\circ - 72^\circ)$
+$\large = 200 \times 1 \times \cos(108^\circ)$
+$\large = 200 \times (-0.309)$
+$\large = -61.8~\text{N} \cdot \text{m}^2 / \text{C}$
 
 :::
 
@@ -113,20 +114,20 @@ At the center of a sphere of radius $0.5$m a point charge of $2~\mu$C is placed.
 Solution:
 
 Electric flux is defined as:
-$\Phi_E = EA\cos\theta$
-Since the electric field is perpendicular to the surface at all points on the sphere, $\theta = 0^\circ$, and $\cos\theta = 1$.
+$\large \Phi_E = EA\cos\theta$
+Since the electric field is perpendicular to the surface at all points on the sphere, $\large \theta = 0^\circ$, and $\cos\theta = 1$.
 
 The area of the sphere is:
-$A = 4\pi r^2 = 4\pi (0.5)^2 = \pi~\text{m}^2$
+$\large A = 4\pi r^2 = 4\pi (0.5)^2 = \pi~\text{m}^2$
 
 First, calculate the electric field at the surface:
-$E = k\frac{q}{r^2} = (8.99 \times 10^9)\frac{2 \times 10^{-6}}{(0.5)^2} = 71920~\text{N/C}$
+$\large E = k\frac{q}{r^2} = (8.99 \times 10^9)\frac{2 \times 10^{-6}}{(0.5)^2} = 71920~\text{N/C}$
 
 Now calculate the flux:
-$\Phi_E = EA = (71920)(\pi) = 71920\pi~\text{N} \cdot \text{m}^2/\text{C}$
-$\Phi_E \approx 2.26 \times 10^5~\text{N} \cdot \text{m}^2/\text{C}$
+$\large \Phi_E = EA = (71920)(\pi) = 71920\pi~\text{N} \cdot \text{m}^2/\text{C}$
+$\large \Phi_E \approx 2.26 \times 10^5~\text{N} \cdot \text{m}^2/\text{C}$
 
-Consequently, the electric flux passing through the sphere is approximately $2.26 \times 10^5~\text{N} \cdot \text{m}^2/\text{C}$.
+Consequently, the electric flux passing through the sphere is approximately $\large 2.26 \times 10^5~\text{N} \cdot \text{m}^2/\text{C}$.
 
 :::
 
@@ -134,25 +135,25 @@ Consequently, the electric flux passing through the sphere is approximately $2.2
 
 A $2~\text{cm} \times 2~\text{cm}$ square lies in the $xy$-plane. Find the electric flux through the square for each of the following electric field vectors.
 
-(a) $\vec{E} = (50\hat{i} + 20\hat{j})~\text{N/C}$
+(a) $\large \vec{E} = (50\hat{i} + 20\hat{j})~\text{N/C}$
 
-(b) $\vec{E} = (50\hat{k} + 20\hat{j})~\text{N/C}$
+(b) $\large \vec{E} = (50\hat{k} + 20\hat{j})~\text{N/C}$
 
 Solution:
 
 The electric flux through a surface is given by:
-$$\Phi_E = \vec{E} \cdot \vec{A}$$
+$\large \Phi_E = \vec{E} \cdot \vec{A}$
 where $\vec{A} = A\hat{n}$ is the area vector perpendicular to the surface.
 
 Since the square lies in the $xy$-plane, its area vector is:
-$$\vec{A} = A\hat{k} = (0.02 \times 0.02)\hat{k} = (4 \times 10^{-4})\hat{k}~\text{m}^2$$
+$\large \vec{A} = A\hat{k} = (0.02 \times 0.02)\hat{k} = (4 \times 10^{-4})\hat{k}~\text{m}^2$
 
 (a) For $\vec{E} = (50\hat{i} + 20\hat{j})~\text{N/C}$:
-$$\Phi_E = \vec{E} \cdot \vec{A} = (50\hat{i} + 20\hat{j}) \cdot (4 \times 10^{-4}\hat{k}) = 0$$
+$\large \Phi_E = \vec{E} \cdot \vec{A} = (50\hat{i} + 20\hat{j}) \cdot (4 \times 10^{-4}\hat{k}) = 0$
 Since neither component of $\vec{E}$ has a $\hat{k}$ component, the dot product is zero.
 
 (b) For $\vec{E} = (50\hat{k} + 20\hat{j})~\text{N/C}$:
-$$\Phi_E = \vec{E} \cdot \vec{A} = (50\hat{k} + 20\hat{j}) \cdot (4 \times 10^{-4}\hat{k}) = 50 \times 4 \times 10^{-4} = 0.02~\text{N} \cdot \text{m}^2/\text{C}$$
+$\large \Phi_E = \vec{E} \cdot \vec{A} = (50\hat{k} + 20\hat{j}) \cdot (4 \times 10^{-4}\hat{k}) = 50 \times 4 \times 10^{-4} = 0.02~\text{N} \cdot \text{m}^2/\text{C}$
 Only the $\hat{k}$ component of $\vec{E}$ contributes to the flux through the $xy$-plane.
 
 :::
@@ -161,30 +162,30 @@ Only the $\hat{k}$ component of $\vec{E}$ contributes to the flux through the $x
 
 Consider a point charge $\mathbf{q}$ that is placed in the center of a sphere of radius $\mathbf{r}$. The electric field generated can be represented as $\mathbf{E} = \frac{k_e q}{r^2}$. The electric field generated by the charge radiates outward, so every chunk of area $\mathbf{dA}$ on the sphere has an electric field vector that is perpendicular to it. Using this information, we can derive the net electric flux for the sphere as shown below.
 
-$\mathbf{E} = \frac{k_e q}{r^2}$
+$\large \mathbf{E} = \frac{k_e q}{r^2}$
 
 Since the electric field $\mathbf{E}$ is radial and constant over the surface, and  
 $\mathbf{E} \parallel d\mathbf{A}$ at every point, the differential flux is:
 
-$d\Phi_E = \mathbf{E} \cdot d\mathbf{A} = E \, dA$
+$\large d\Phi_E = \mathbf{E} \cdot d\mathbf{A} = E \, dA$
 
 The total electric flux through the surface is:
 
-$\Phi_E = \oint \mathbf{E} \cdot d\mathbf{A} = E \oint dA = E \cdot A$
+$\large \Phi_E = \oint \mathbf{E} \cdot d\mathbf{A} = E \oint dA = E \cdot A$
 
 For a sphere, the total area is $A = 4\pi r^2$, so:
 
-$\Phi_E = \left( \frac{k_e q}{r^2} \right)(4\pi r^2) = 4\pi k_e q$
+$\large \Phi_E = \left( \frac{k_e q}{r^2} \right)(4\pi r^2) = 4\pi k_e q$
 
 Using the identity $k_e = \frac{1}{4\pi \varepsilon_0}$, we get:
 
-$\Phi_E = \frac{q}{\varepsilon_0}$
+$\large \Phi_E = \frac{q}{\varepsilon_0}$
 
 However, this derived equation for the net flux can actually be used for *any* closed surface. **Gauss's Law works for any closed surface, no matter its shape.**
 
 :::tip[Key Equation]
 
-$\Phi_E = \oint \mathbf{E} \cdot d\mathbf{A} = \frac{q}{\varepsilon_0}$
+$\large \Phi_E = \oint \mathbf{E} \cdot d\mathbf{A} = \frac{q}{\varepsilon_0}$
 
 :::
 
@@ -200,35 +201,35 @@ Here is a video describing the idea of electric flux and Gauss's law with more v
 
 **8.8.2**
 
-* [Intro to flux](https://openstax.org/books/university-physics-volume-2/pages/6-1-electric-flux)
-* [Flux and Gauss's Law](https://phys.libretexts.org/Bookshelves/University_Physics/Physics_(Boundless)/17%3A_Electric_Charge_and_Field/17.5%3A_Electric_Flux_and_Gausss_Law)
-* [Electric flux article](https://byjus.com/physics/electric-flux/)
-* [Video about electric flux and how to calculate it](https://www.youtube.com/watch?v=9MN0eTC-vzQ)
+- [Intro to flux](https://openstax.org/books/university-physics-volume-2/pages/6-1-electric-flux)
+- [Flux and Gauss's Law](https://phys.libretexts.org/Bookshelves/University_Physics/Physics_(Boundless)/17%3A_Electric_Charge_and_Field/17.5%3A_Electric_Flux_and_Gausss_Law)
+- [Electric flux article](https://byjus.com/physics/electric-flux/)
+- [Video about electric flux and how to calculate it](https://www.youtube.com/watch?v=9MN0eTC-vzQ)
 
 **8.8.3**
 
-* [Gauss's Law](http://hyperphysics.phy-astr.gsu.edu/hbase/electric/gaulaw.html)
-* [Explaining Gauss's Law](https://phys.libretexts.org/Bookshelves/University_Physics/University_Physics_(OpenStax)/University_Physics_II_-_Thermodynamics_Electricity_and_Magnetism_(OpenStax)/06%3A_Gauss%27s_Law/6.03%3A_Explaining_Gausss_Law)
-* [Article about Gauss's Law](https://web.chem.ox.ac.uk/teaching/Physics%20for%20CHemists/Electricity/Gauss.html)
-* [Video about flux, Gauss's Law and electric fields](https://www.youtube.com/watch?v=q1eor6oIuUo)
-* [Gauss's Law made easy](https://www.youtube.com/watch?v=l2F4xuzRbFY)
+- [Gauss's Law](http://hyperphysics.phy-astr.gsu.edu/hbase/electric/gaulaw.html)
+- [Explaining Gauss's Law](https://phys.libretexts.org/Bookshelves/University_Physics/University_Physics_(OpenStax)/University_Physics_II_-_Thermodynamics_Electricity_and_Magnetism_(OpenStax)/06%3A_Gauss%27s_Law/6.03%3A_Explaining_Gausss_Law)
+- [Article about Gauss's Law](https://web.chem.ox.ac.uk/teaching/Physics%20for%20CHemists/Electricity/Gauss.html)
+- [Video about flux, Gauss's Law and electric fields](https://www.youtube.com/watch?v=q1eor6oIuUo)
+- [Gauss's Law made easy](https://www.youtube.com/watch?v=l2F4xuzRbFY)
 
 ## Equations and Constants
 
 **Equations**
 
-* $\Phi_E = EA_{\perp} = EAcos(\theta)$
-  * $A_{\perp}$ = the area perpendicular to the electric field vectors
-  * $E$ = the electric field
-  * $\theta$ = the angle between the electric field line and an imaginary line that is perpendicular to the area
-* $\Phi_E = \oint \mathbf{E} \cdot d\mathbf{A}$
-  * **Note:** you most likely won't have to worry about this equation. Most problems don't need this difficult calculus, so you can often use the easier formula listed below.
-  * $\oint \mathbf{E}$ = the surface integral of where the field is being produced/emitted
-* $\Phi_E = \frac{q}{\varepsilon_0}$
-  * $q$ = the electric charge
-  * $\varepsilon_0$ = permittivity of free space
+- $\large \Phi_E = EA_{\perp} = EAcos(\theta)$
+  - $A_{\perp}$ = the area perpendicular to the electric field vectors
+  - $E$ = the electric field
+  - $\theta$ = the angle between the electric field line and an imaginary line that is perpendicular to the area
+- $\large \Phi_E = \oint \mathbf{E} \cdot d\mathbf{A}$
+  - **Note:** you most likely won't have to worry about this equation. Most problems don't need this difficult calculus, so you can often use the easier formula listed below.
+  - $\oint \mathbf{E}$ = the surface integral of where the field is being produced/emitted
+- $\large \Phi_E = \frac{q}{\varepsilon_0}$
+  - $q$ = the electric charge
+  - $\varepsilon_0$ = permittivity of free space
 
 <br></br>
 
-* For ALL equations listed above:
-  * $\Phi_E$ = the electric flux
+- For ALL equations listed above:
+  - $\Phi_E$ = the electric flux
