--- a/docs/Unit-8/8.9-applications.md
+++ b/docs/Unit-8/8.9-applications.md
@@ -22,30 +22,30 @@ In:
 The electric field for a point inside the radius of this sphere will be 0
 
 Out:
-$\oint \mathbf{E} \cdot d\mathbf{A} = \frac{Q_{\text{enc}}}{\varepsilon_0}$
+$\large \oint \mathbf{E} \cdot d\mathbf{A} = \frac{Q_{\text{enc}}}{\varepsilon_0}$
 
-$\mathbf{E} \cdot 4 \pi r^2 = \frac{Q}{\varepsilon_0}$
+$\large \mathbf{E} \cdot 4 \pi r^2 = \frac{Q}{\varepsilon_0}$
 
-$\mathbf{E}(r) = \frac{Q}{4 \pi \varepsilon_0 r^2} \,\hat{\mathbf{r}}, \quad r \ge R$
+$\large \mathbf{E}(r) = \frac{Q}{4 \pi \varepsilon_0 r^2} \,\hat{\mathbf{r}}, \quad r \ge R$
 
-$\mathbf{E}_{\text{surface}} = \frac{Q}{4 \pi \varepsilon_0 R^2} \,\hat{\mathbf{r}} = \frac{\sigma}{\varepsilon_0} \,\hat{\mathbf{r}}, \quad \sigma = \frac{Q}{4 \pi R^2}$
+$\large \mathbf{E}_{\text{surface}} = \frac{Q}{4 \pi \varepsilon_0 R^2} \,\hat{\mathbf{r}} = \frac{\sigma}{\varepsilon_0} \,\hat{\mathbf{r}}, \quad \sigma = \frac{Q}{4 \pi R^2}$
 
 ## 8.9.4 - The Formal Derivation of Gauss's Law
 
-$\Delta \Phi_E = \mathbf{E} \cdot \Delta \mathbf{A} = E \, \Delta A \cos\theta$
+$\large \Delta \Phi_E = \mathbf{E} \cdot \Delta \mathbf{A} = E \, \Delta A \cos\theta$
 
-$E = k_e \frac{q}{r^2}$
+$\large E = k_e \frac{q}{r^2}$
 
-$\Delta \Phi_E = k_e \frac{q}{r^2} \, \Delta A \cos\theta$
+$\large \Delta \Phi_E = k_e \frac{q}{r^2} \, \Delta A \cos\theta$
 
-$\Delta \Omega = \frac{\Delta A \cos\theta}{r^2}$
+$\large \Delta \Omega = \frac{\Delta A \cos\theta}{r^2}$
 
-$\Delta \Phi_E = k_e q \, \Delta \Omega$
+$\large \Delta \Phi_E = k_e q \, \Delta \Omega$
 
-$\Phi_E = \sum \Delta \Phi_E = k_e q \sum \Delta \Omega$
+$\large \Phi_E = \sum \Delta \Phi_E = k_e q \sum \Delta \Omega$
 
-$\sum \Delta \Omega = 4\pi$
+$\large \sum \Delta \Omega = 4\pi$
 
-$\Phi_E = 4 \pi k_e q = \frac{q}{\varepsilon_0}$
+$\large \Phi_E = 4 \pi k_e q = \frac{q}{\varepsilon_0}$
 
-$\oint \mathbf{E} \cdot d\mathbf{A} = \frac{q_{\text{enc}}}{\varepsilon_0}$
+$\large \oint \mathbf{E} \cdot d\mathbf{A} = \frac{q_{\text{enc}}}{\varepsilon_0}$
