--- a/docs/Unit-9/9.1-potential.md
+++ b/docs/Unit-9/9.1-potential.md
@@ -26,7 +26,7 @@ $\large U_{E} = \frac{k \cdot q_{1}q_{2}}{r} \hspace{35pt} U_{G} = \frac{G \cdot
 $\large U_{E} = \frac{k \cdot q_{1}q_{2}}{r}$
 
 * $U_{E}$ is the electrical potential energy
-  * **Important note:** $U_{E}$ is a scalar quantity and can be *negative or positive*.  We will go over this later.
+* **Important note:** $U_{E}$ is a scalar quantity and can be *negative or positive*.  We will go over this later.
 * $k$ is the Coulomb constant
 * $q_{1}$ and $q_{2}$ are the two charges
 
@@ -125,7 +125,7 @@ Like the topographic map, when lines are close together, we know that the potent
 
 **9.1.4**
 
-* [The conection between electric field and potential (video)](https://www.youtube.com/watch?v=RNofANV680Q&t=210)
+* [The connection between electric field and potential (video)](https://www.youtube.com/watch?v=RNofANV680Q&t=210)
 * [The Organic Chemistry Tutor video about electric field and potential](https://www.youtube.com/watch?v=LzKMQByFSLc&t=869)
 
 **9.1.5**
@@ -139,15 +139,12 @@ Like the topographic map, when lines are close together, we know that the potent
 **Equations**
 
 * $\large U_{E} = \frac{k \cdot q_{1}q_{2}}{r}$
-  * $U_{E}$ = electrical potential energy
-  * $k$ = Coulomb constant
-  * $q_{1}$ and $q_{2}$ = the two charges
-
+* $U_{E}$ = electrical potential energy
+* $k$ = Coulomb constant
+* $q_{1}$ and $q_{2}$ = the two charges
 * $\large U_{E} = qV$
-  * $V = \frac{U_{E}}{q} = \frac{kq}{r}$
-
+* $V = \frac{U_{E}}{q} = \frac{kq}{r}$
 * $\large E_{x} = \frac{dV}{dx}$
-
 * $\large \Delta V = -\int_{}^{}\overrightarrow{E}\cdot d\overrightarrow{r}$
-  * $\Delta V$ = electric potential
-  * $\large \Delta V = V_{final} - V_{initial}$
+* $\Delta V$ = electric potential
+* $\large \Delta V = V_{final} - V_{initial}$
