--- a/docs/Unit-9/9.2-conservation.md
+++ b/docs/Unit-9/9.2-conservation.md
@@ -90,5 +90,8 @@ $\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2} = -\Delta U_{
 **Equations**
 
 * $\large \Delta V = \frac{\Delta U_{E}}{q}$
-
+  * $\Delta V$ = electric potential
+  * $U_{E}$ = electrical potential energy
 * $\large \Delta K = \frac{1}{2} mv_{f}^{2} - \frac{1}{2} mv_{i}^{2} = -\Delta U_{E}$
+  * $\Delta K$ = change in kinetic energy
+  * $\Delta U_{E}$ = change in electrical energy
