--- a/docs/Unit-8/8.7-motion.md
+++ b/docs/Unit-8/8.7-motion.md
@@ -16,13 +16,13 @@ Due to this constant acceleration, we can use the kinematics equations that we l
 
 We know that $\mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$, or $q\mathbf{E} = m\mathbf{a}$. When we isolate for acceleration, we get:
 
-$\mathbf{a} = \frac{q\mathbf{E}}{m}$
+$\large \mathbf{a} = \frac{q\mathbf{E}}{m}$
 
 :::note
 
 If the charge is negative, then you will have the following acceleration equation:
 
-$\mathbf{a} = -\frac{e\mathbf{E}}{m}$
+$\large \mathbf{a} = -\frac{e\mathbf{E}}{m}$
 
 In this case $e$ is an electron, which has a negative charge.
 
@@ -30,17 +30,17 @@ In this case $e$ is an electron, which has a negative charge.
 
 Our original kinematic equations are as follows:
 
-- $\Delta x = v_{i}t + \frac{1}{2}at^{2}$
-- $v_{f} = v_{i} + at$
-- $v_{f}^{2} = v_{i}^{2} +2a\Delta x$
+- $\large \Delta x = v_{i}t + \frac{1}{2}at^{2}$
+- $\large v_{f} = v_{i} + at$
+- $\large v_{f}^{2} = v_{i}^{2} +2a\Delta x$
 
 All we need to do is plug in our value for $\mathbf{a}$ into those equations:
 
 :::tip[Key Equation]
 
-- $\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
-- $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
-- $v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
+- $\large \Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
+- $\large v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
+- $\large v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
 
 $q$ is the charge and $\mathbf{E}$ is the electric field. $m$ is the mass of the charge (some textbooks write it as $m_{e}$. All other variables are the same but in terms of a charged particle. For example, the velocity is the velocity of the charged particle.
 
@@ -52,8 +52,8 @@ We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also 
 
 :::tip[Key Equation]
 
-- $W = q\mathbf{E}\Delta x$
-- $\Delta K = q\mathbf{E}\Delta x$
+- $\large W = q\mathbf{E}\Delta x$
+- $\large \Delta K = q\mathbf{E}\Delta x$
 
 Just like the previous key equations, $q$ is the charge and $E$ is the electric field.
 
@@ -64,17 +64,17 @@ Remember: **the force caused by an electric field is just another force**. **The
 :::info[Sample Question]
 A *Cathode Ray Tube (CRT)* is a device used to generate visual displays by accelerating electrons. In this scenario, an electron is fired horizontally from the electron gun with an initial velocity of $v_i = 1{,}000{,}000 \, \text{m/s}$. Immediately after being emitted, the electron enters a region between two parallel plates that are each $\ell = 0.2 \, \text{m}$ in length. The **positively charged plate is on top**, and the **negatively charged plate is on the bottom**, creating a uniform electric field of magnitude $E = 300 \, \text{N/C}$ pointing vertically downward. What is the vertical displacement $\Delta y$ of the electron as it exits the parallel plate region?
 
-$t = \frac{\ell}{v_i} = \frac{0.2}{1{,}000{,}000} = 2 \times 10^{-7} \, \text{s}$  
+$\large t = \frac{\ell}{v_i} = \frac{0.2}{1{,}000{,}000} = 2 \times 10^{-7} \, \text{s}$  
 
-$F = qE = (1.6 \times 10^{-19})(300) = 4.8 \times 10^{-17} \, \text{N}$  
+$\large F = qE = (1.6 \times 10^{-19})(300) = 4.8 \times 10^{-17} \, \text{N}$  
 
-$a = \frac{F}{m} = \frac{4.8 \times 10^{-17}}{9.11 \times 10^{-31}} = 5.27 \times 10^{13} \, \text{m/s}^2$  
+$\large a = \frac{F}{m} = \frac{4.8 \times 10^{-17}}{9.11 \times 10^{-31}} = 5.27 \times 10^{13} \, \text{m/s}^2$  
 
-$\Delta y = \frac{1}{2} a t^2 = \frac{1}{2}(5.27 \times 10^{13})(2 \times 10^{-7})^2$  
+$\large \Delta y = \frac{1}{2} a t^2 = \frac{1}{2}(5.27 \times 10^{13})(2 \times 10^{-7})^2$  
 
-$\Delta y = \frac{1}{2}(5.27 \times 10^{13})(4 \times 10^{-14})$  
+$\large \Delta y = \frac{1}{2}(5.27 \times 10^{13})(4 \times 10^{-14})$  
 
-$\Delta y = (2 \times 10^{-14})(5.27 \times 10^{13}) = 1.05 \, \text{m}$
+$\large \Delta y = (2 \times 10^{-14})(5.27 \times 10^{13}) = 1.05 \, \text{m}$
 :::
 
 Essentially, when analyzing motion of charged objects, it is important to consider that the same laws of mechanics still apply. For example, the kinematics equations, because they still apply during constant acceleration or certain relationships such as torque and angular acceleration. Once again: **the force caused by an electric field is just another force.**
@@ -101,14 +101,14 @@ This video contains the basics of some motion calculations which may be done und
 
 **Equations**
 
-- $\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
-- $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
-- $v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
+- $\large \Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
+- $\large v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
+- $\large v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
 
 <br></br>
 
-- $W = q\mathbf{E}\Delta x$
-- $\Delta K = q\mathbf{E}\Delta x$
+- $\large W = q\mathbf{E}\Delta x$
+- $\large \Delta K = q\mathbf{E}\Delta x$
 
 <br></br>
 
